# Ansible

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  Ansible.code-workspace  CLAUDE.md  Dockerfile  Jenkinsfile  Jenkinsfile.architecture  Jenkinsfile.iac-dqlite-watchdog  Jenkinsfile.iac-image  Jenkinsfile.iac-on-push  Jenkinsfile.iac-scheduled-drift  Jenkinsfile.iac-scheduled-update  README.md  pyproject.toml  requirements.txt
.claude/agents/: arch-design.md  code-reviewer.md  code-writer.md  plan-reviewer.md  plan-writer.md  slice-verifier.md
.claude/commands/: arch-design.md  run-slice.md  triage.md  update-docs.md  write-slice.md
.llmbox/: docker-compose.yml
ansible/: ansible.cfg
ansible/collections/: requirements.yml
ansible/files/: homelab-root.crt  pve.pub
ansible/playbooks/: README.md  adopt.yml  apply-k8s-apiserver-cert.yml  apply-k8s-baseline.yml  apply-k8s-vip.yml  evict-k8s.yml  grow-disks.yml  microk8s.yml  rebuild-k8s.yml  reconcile-k8s-dns.yml  recover-dqlite-watch.yml  refresh-k8s-addons.yml  reissue-host-cert.yml  site-ceph.yml  site-k8s.yml  site-openbao.yml  site.yml  update-k8s.yml
ansible/roles/: README.md
docs/: buildkit-and-mtls-authz.md  decisions.md  plan.md
docs/architecture/: ansible-architecture.yaml
docs/phases/: phase-1-bootstrap-baseline.md  phase-2-proxmox-hosts.md  phase-3-vm-fleet.md  phase-3a-vm-fleet-import.md  (+7 more)
scripts/: arch-validate  args.sh  bao-login.sh  openbao-annotate-rotation.sh  openbao-rotate-unrestricted.sh  openbao-rotation-audit.sh  tf-backend.sh
terraform/: README.md
(+274 files in other folders)
