[tool.poetry]
name = "homelab-ansible"
version = "0.1.0"
description = "Ansible + Terraform for homelab infrastructure"
authors = ["Pieter van Ginkel <pvginkel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^13.0"
ansible-lint = "^26.0"
yamllint = "^1.35"
jmespath = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
